--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-<li><a href="https://www.zhihu.com/question/31464934">理解全微分（cxflxx的回答也不错）</a></li>
+    <li><a href="https://www.zhihu.com/question/31464934">理解全微分（cxflxx的回答也不错）</a></li>
     <li><a href="https://www.zhihu.com/question/36301367">方向导数和梯度</a></li>
-<li><a href="https://www.zhihu.com/question/22674439">如何理解格林公式</a></li>
+    <p> 首先要明白对曲线和曲面的坐标积分的有向性，然后阅读下面后尝试推导高斯公式</p>
+    <li><a href="https://www.zhihu.com/question/22674439">如何理解格林公式</a></li>
     <li><a href="https://www.zhihu.com/question/22674439">如何理解格林公式</a></li>
     <li><a href="https://www.zhihu.com/question/22674439">如何理解格林公式</a></li>
     <li><a href="https://www.zhihu.com/question/22674439">如何理解格林公式</a></li>
